# module_logger

./: .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  Logger.ui  Logger_global.h  README.md
